--- a/simpleBlog/Views/Shared/_Layout.cshtml
+++ b/simpleBlog/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Softa", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Website Name", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -25,8 +25,31 @@
             </div>
         </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
 
-    <div class="container body-content">
+<header>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <p>welcome back, @User.Identity.Name</p>
+        <a href="@Url.RouteUrl("logout")">Logout</a>
+
+        if (User.IsInRole("admin"))
+        {
+            <a href="@Url.Action("index", "Posts", new {area = "admin"})">View posts in admin</a>
+        }
+    }
+    else
+    {
+        <a href="@Url.RouteUrl("login")">login</a>
+    }
+
+</header>
+
+
+<div class="container body-content">
         
         @RenderBody()
         
