11. Scripts, Styles and Bundles

--- a/simpleBlog/Views/Shared/_Layout.cshtml
+++ b/simpleBlog/Views/Shared/_Layout.cshtml
@@ -1,14 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Softa</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    @Styles.Render("~/styles")
 </head>
 <body>
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -20,49 +20,42 @@
                 @Html.ActionLink("Website Name", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+                <ul class="nav navbar-nav"></ul>
             </div>
         </div>
     </div>
-    <br />
-    <br />
-    <br />
-    <br />
+
+    <br /><br /><br /><br />
 
 <header>
-    @if (User.Identity.IsAuthenticated)
-    {
-        <p>welcome back, @User.Identity.Name</p>
-        <a href="@Url.RouteUrl("logout")">Logout</a>
-
-        if (User.IsInRole("admin"))
+        @if (User.Identity.IsAuthenticated)
         {
-            <a href="@Url.Action("index", "Posts", new {area = "admin"})">View posts in admin</a>
+            
+            <p><i class="glyphicon glyphicon-arrow-left"></i>welcome back, @User.Identity.Name</p>
+            <a href="@Url.RouteUrl("logout")">Logout</a>
+
+            if (User.IsInRole("admin"))
+            {
+                <a href="@Url.Action("index", "Posts", new {area = "admin"})">View posts in admin</a>
+            }
         }
-    }
-    else
-    {
-        <a href="@Url.RouteUrl("login")">login</a>
-    }
-
-</header>
+        else
+        {
+            <a href="@Url.RouteUrl("login")">login</a>
+        }
+    </header>
 
 
-<div class="container body-content">
-        
+    <div class="container body-content">
         @RenderBody()
-        
-        <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
-
-
-        @RenderSection("Scripts",false)
     </div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+
+
+    @Scripts.Render("~/scripts")
+    @RenderSection("Scripts", false)
 </body>
 </html>
