--- a/simpleBlog/Areas/Admin/Views/User/Index.cshtml
+++ b/simpleBlog/Areas/Admin/Views/User/Index.cshtml
@@ -1,7 +1,15 @@
-﻿
+﻿@model simpleBlog.Areas.Admin.ViewModels.UsersIndex 
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>User</h2>
+
+
+<ul>
+    @foreach (var user in Model.Users)
+    {
+        <li>@user.UserName</li>
+    }
+</ul>
 
