--- a/simpleBlog/Areas/Admin/Views/User/Index.cshtml
+++ b/simpleBlog/Areas/Admin/Views/User/Index.cshtml
@@ -6,10 +6,43 @@
 <h2>User</h2>
 
 
-<ul>
-    @foreach (var user in Model.Users)
-    {
-        <li>@user.UserName</li>
-    }
-</ul>
+<div class="btn-toolbar">
+    <a href="@Url.Action("new")" class="btn btn-primary btn-sm"><i class="glyphicon-plus"></i> Create User</a>
+</div>
 
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Username</th>
+        <th>Email</th>
+        <th>Roles</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <thead>
+        @foreach (var user in Model.Users)
+        {
+            <tr>
+                <td>@user.Id</td>
+                <td>@user.UserName</td>
+                <td>@user.Email</td>
+                <td>{{Todo}}</td>
+                <td>
+                    <div class="btn-group">
+                        <a href="@Url.Action("edit", new{user.Id})" class="btn btn-xs btn-primary">
+                            <i class="glyphicon glyphicon-edit"></i>Edit
+                        </a>
+                        <a href="@Url.Action("resetpassword", new{user.Id})" class="btn btn-xs btn-primary">
+                            <i class="glyphicon glyphicon-lock"></i>Reset Password
+                        </a>
+                        <a href="@Url.Action("delete",new {user.Id})" class="btn btn-xs btn-danger" data-post="Are you sure you want to delete @user.UserName ?">
+                            <i class="glyphicon glyphicon-remove"></i>Delete
+                        </a>
+                    </div>
+                </td>
+            </tr>
+        }
+    </thead>
+</table>
