19. Database Driven Auth in ASP.NET

--- a/simpleBlog/Views/Posts/index.cshtml
+++ b/simpleBlog/Views/Posts/index.cshtml
@@ -9,7 +9,7 @@
 <h1>Posts Index</h1>
 
 <p>
-    <a href="@Url.RouteUrl("login")">Click here</a> to Login!
+    <a class="btn bg-success" href="@Url.RouteUrl("login")">Click here</a> to Login!
 </p>
 
 
