--- a/simpleBlog/Areas/Admin/Views/User/New.cshtml
+++ b/simpleBlog/Areas/Admin/Views/User/New.cshtml
@@ -21,9 +21,11 @@
 
     <div class="form-group">
         @Html.LabelFor(f => f.Password)
-        @Html.PasswordFor(f => f.Password, new { @class = "form-control" })
+        @Html.PasswordFor(f => f.Password, new {@class = "form-control"})
     </div>
 
+    @Html.Partial("_RoleEditor", Model.Roles)
+    
     <input type="submit" value="Create User" class="btn btn-primary"/>
     <a href="@Url.Action("index")"> or cancel</a>
 }
